[gd_scene load_steps=8 format=2]

[ext_resource path="res://Pad.tscn" type="PackedScene" id=1]
[ext_resource path="res://Ball.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game.gd" type="Script" id=3]
[ext_resource path="res://Wall.tscn" type="PackedScene" id=4]
[ext_resource path="res://Goal.tscn" type="PackedScene" id=5]
[ext_resource path="res://arial-unicode-ms.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 6 )

[node name="Game" type="Node2D"]
script = ExtResource( 3 )

[node name="Pad0" parent="." instance=ExtResource( 1 )]
position = Vector2( 30, 360 )

[node name="Pad1" parent="." instance=ExtResource( 1 )]
position = Vector2( 1250, 360 )

[node name="Ball" parent="." instance=ExtResource( 2 )]
position = Vector2( 640, 30 )
contacts_reported = 1
can_sleep = false

[node name="TopWall" parent="." instance=ExtResource( 4 )]
position = Vector2( 640, -10 )

[node name="BottomWall" parent="." instance=ExtResource( 4 )]
position = Vector2( 640, 730 )

[node name="Goal0" parent="." instance=ExtResource( 5 )]
position = Vector2( -10, 360 )

[node name="Goal1" parent="." instance=ExtResource( 5 )]
position = Vector2( 1290, 360 )

[node name="Score0" type="Label" parent="."]
margin_left = 74.0
margin_top = 23.0
margin_right = 217.0
margin_bottom = 158.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score1" type="Label" parent="."]
margin_left = 1051.0
margin_top = 23.0
margin_right = 1210.0
margin_bottom = 158.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
